--- a/css/general.less
+++ b/css/general.less
@@ -5,8 +5,9 @@ html {
 
 @bodyMarginTop: 75px;
 
+
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "pragmatica-web" , sans-serif !important;
   padding-top: @bodyMarginTop;
   &.noScroll{
     //overflow: hidden; 
@@ -135,6 +136,15 @@ td.center{
     input{
       margin-bottom: 0px;
     }
+    
+    .dropdownContainer{
+      padding: 15px;
+      
+      a{
+        color: #fff !important;
+      }
+    }
+    
   }
 
   margin-top: 15px;
