--- a/css/helpers.less
+++ b/css/helpers.less
@@ -6,6 +6,10 @@
   margin-left: 10px;
 }
 
+.withMarginBottom{
+  margin-bottom: 10px !important;
+}
+
 .withMargin{
   margin: 7px;
 }
@@ -60,6 +64,15 @@
   vertical-align:top;
 }
 
+.alignLeft{
+  text-align: left;
+}
+
 .relative{
   position: relative;
 }
+
+.pull-right {
+  float: right !important;
+}
+
