--- a/css/index.less
+++ b/css/index.less
@@ -21,11 +21,16 @@
 @import "./responsive.less";
 @import "./helpers.less";
 
-
 body{
   .container{
     max-width: 980px;
   }
+}
+
+h1,h2,h3,h3,h4,h5,h6{
+
+  font-family: "motor-stencil" !important;
+
 }
 
 *{
