--- a/css/components/header.less
+++ b/css/components/header.less
@@ -42,6 +42,42 @@ header{
   }
   
   .nav{
+  
+  
+    .toSalesforce{
+      margin-top: 8px;
+      color: @blue !important; 
+    }
+    
+    .actionButtons{
+      padding-top: 10px;
+      a{
+        color: #fff;
+        display: inline-block;
+        margin: 0px;
+        padding-right: 0px;
+
+        &:hover{
+          color: @red;
+          text-decoration: none;
+        }
+        i{
+          font-size: 20px; 
+          width: auto;
+          &.active{
+            color: @red;
+          }
+          &.loading{
+            -webkit-animation-name:             loading; 
+            -webkit-animation-duration:         0.85s; 
+            -webkit-animation-iteration-count:  infinite;
+            -webkit-transition-timing-function: linear;
+            color: @orange;
+          }      
+        }
+      }
+    }
+  
     .dropdown{
       .userWrapper{
         max-height: 350px;
@@ -65,6 +101,19 @@ header{
         }
       }
     }
+  }
+}
+
+
+
+
+
+@-webkit-keyframes loading {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to { 
+    -webkit-transform: rotate(360deg);
   }
 }
 
