fixed invoice layout

--- a/css/components/invoice.less
+++ b/css/components/invoice.less
@@ -207,7 +207,7 @@
   }  
   
   .cliente{
-    width: 71%;
+    width: 80%;
     display: inline-block;
     span{ display:block; line-height: 13px;font-size: 14px;}
     img{
@@ -219,6 +219,9 @@
     .block{
       vertical-align: top;
       display: inline-block;
+      width: 90%;
+      height: 63px;
+      overflow-y: hidden;
       .name{
         font-size: 20px;
         line-height: 20px;
@@ -226,9 +229,11 @@
         font-weight: 400;
       }
       .address{
-        font-size: 14px;
+        font-size: 13px;
         font-weight: 200;
         line-height: 15px;
+        height: 13px;
+        overflow: hidden;
       }
       .order{
         font-size: 14px;
