fix date on invoice

--- a/css/general.less
+++ b/css/general.less
@@ -178,4 +178,10 @@ td.center{
   border-image: initial;
 }
 
+[draggable] {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
 
